[gd_scene load_steps=11 format=3 uid="uid://c8dk41e3poig1"]

[ext_resource type="Script" path="res://scripts/balrog.gd" id="1_ecelo"]
[ext_resource type="Material" uid="uid://dj8c8abta0f7j" path="res://mats/black.tres" id="1_mcbjj"]
[ext_resource type="PackedScene" uid="uid://dossusm1hrl70" path="res://scenes/wing.tscn" id="1_q2pr5"]
[ext_resource type="PackedScene" uid="uid://bxyd1te8fawp4" path="res://scenes/field_collider.tscn" id="4_633lb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g13f3"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_emnp0"]
material = ExtResource("1_mcbjj")

[sub_resource type="TorusMesh" id="TorusMesh_w81dx"]
material = ExtResource("1_mcbjj")
inner_radius = 0.3
outer_radius = 0.525

[sub_resource type="SphereShape3D" id="SphereShape3D_efqtx"]

[sub_resource type="SphereShape3D" id="SphereShape3D_f5b23"]

[sub_resource type="SphereShape3D" id="SphereShape3D_o5uun"]

[node name="Balrog" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 5
floor_block_on_wall = false
script = ExtResource("1_ecelo")

[node name="Shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_g13f3")

[node name="BodyMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
mesh = SubResource("CapsuleMesh_emnp0")

[node name="Head" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1.14437, 0.820122, 0, -1.64024, -0.572189, 0, 1.72554, -0.229409)
mesh = SubResource("TorusMesh_w81dx")

[node name="Wings" type="Node3D" parent="."]
transform = Transform3D(1.7, 0, 0, 0, 1.7, 0, 0, 0, 1.7, 0, 1.4, 0.45)

[node name="Wing_R" parent="Wings" instance=ExtResource("1_q2pr5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Wing_L" parent="Wings" instance=ExtResource("1_q2pr5")]
transform = Transform3D(-1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CamPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="SpringArm" type="SpringArm3D" parent="CamPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
spring_length = 4.0
margin = 0.05

[node name="Q" type="Node3D" parent="CamPivot/SpringArm"]

[node name="Camera3D" type="Camera3D" parent="CamPivot/SpringArm/Q"]
fov = 70.0

[node name="FieldCollider" parent="CamPivot/SpringArm/Q/Camera3D" node_paths=PackedStringArray("parent_body") instance=ExtResource("4_633lb")]
shape = SubResource("SphereShape3D_efqtx")
radius = 0.5
ground_stick = 0.0
parent_body = NodePath("..")

[node name="FieldCollider" parent="." node_paths=PackedStringArray("parent_body") instance=ExtResource("4_633lb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
shape = SubResource("SphereShape3D_f5b23")
radius = 0.5
ground_stick = 1.5
parent_body = NodePath("..")

[node name="FieldCollider2" parent="." node_paths=PackedStringArray("parent_body") instance=ExtResource("4_633lb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_o5uun")
radius = 0.5
ground_stick = 0.0
parent_body = NodePath("..")
